# kid_chat

./: .gitignore  README.md  TODO.md  claude.md  ecosystem.config.js  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.cursor/: worktrees.json
data/: !original_source_file.md  agent_logs.jsonl  agent_test_results.json  llm_logs.jsonl  onboarding_approvals.json  operouter_models.md
data/app_json/: dante_topics_to_discuss.json  todo_list.json  (+1 more)
docs/: MESSAGE_ROUTER_PLAN.md  Notes.md
prompts/: daily_report.md  daily_report_stage1_plan.md  daily_report_updates_context.md  handle_income_message.md  message_router.md  morning_plan.md  onboarding_router.md  update__data_app_json__dante_topics_to_discuss.json.md  update__data_app_json__todo_list.json.md  update__data_app_json__video.json.md  update__data_app_pages__Education.md  update_json_app_data.md  update_md_app_page.md  update_md_file.md
reports/: 2026-01-14.messages.md  2026-01-14.morning_plan.google_gemini-2.0-flash-001.md  2026-01-14.summary.google_gemini-2.0-flash-001.md  2026-01-14.updates.google_gemini-2.0-flash-001.json  2026-01.summary.google_gemini-2.0-flash-001.md  2026-W03.summary.google_gemini-2.0-flash-001.md
scripts/: auto_update_repo.sh  close_processes.sh  report_scheduler.js  run_daily_report.sh  run_monthly_report.sh  run_morning_plan.sh  run_weekly_report.sh  start_all.sh
tests/: agent_test_cases.json  conftest.py  manual_handle_message_bot.py  message_types_test.json  router_test_results.json  run_router_tests.py  test_message_router.py  test_telegram_roundtrip.py
(+25 files in other folders)
